--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,7 +98,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.TOKEN }}
       with:
-        tag_name: RP${{ steps.release_version.outputs.release_version }}
+        tag_name: Dev${{ steps.release_version.outputs.release_version }}
         files: |
           fb-upload.tar.gz
           build/*
