--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build binaries and Upload to Release
 
 on:
   push:
-    branches: [ MainWithGUI ]
+    branches: [ Mainfull ]
     paths:
       - "version"
   workflow_dispatch: {}
