--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build binaries and Upload to Release
 
 on:
   push:
-    branches: [ Mainfull ]
+    branches: [ main ]
     paths:
       - "version"
   workflow_dispatch: {}
@@ -46,24 +46,129 @@ jobs:
         sudo apt update
         sudo apt install gcc-mingw-w64-i686 gcc-mingw-w64-x86-64 gcc gcc-aarch64-linux-gnu libgl1-mesa-dev xorg-dev -y
       
-#    - name: Setup LLVM dependencies
-#      run: |
-#        sudo apt install libedit2 libxml2 libncursesw6 binutils elfutils
-#        wget -q http://ftp.debian.org/debian/pool/main/libf/libffi/libffi8_3.4.4-1_amd64.deb
-#        sudo dpkg -i libffi8_3.4.4-1_amd64.deb
-#    - name: Cache LLVM
-#      id: cache-llvm
-#      uses: actions/cache@v3
-#      with:
-#        key: llvm-cache
-#        path: ~/llvm
-#    - name: Download LLVM
-#      if: steps.cache-llvm.outputs.cache-hit != 'true'
-#      run: |
-#        wget -q https://github.com/Torrekie/homebrew-core/releases/download/LLVM-14.0.6/llvm.tar.xz
-#        tar xf llvm.tar.xz
-#        rm llvm.tar.xz
-#        mv llvm/14.0.6 ~/llvm
+    - name: Setup theos's dependencies
+      run: sudo apt install fakeroot git perl zip unzip rename build-essential libtinfo5 libplist-utils brotli
+      
+    - name: Cache theos and toolchain
+      id: cache-theos
+      uses: actions/cache@v3
+      with:
+        key: theos-with-ios-and-macos-sdk-plus-ios-toolchain-cache
+        path: ~/theos
+      
+    - name: Clone theos
+      if: steps.cache-theos.outputs.cache-hit != 'true'
+      uses: actions/checkout@v2
+      with:
+        submodules: 'recursive'
+        repository: 'theos/theos'
+        path: 'theos'
+      
+    - name: Setup theos
+      if: steps.cache-theos.outputs.cache-hit != 'true'
+      run: |
+        mv $GITHUB_WORKSPACE/theos ~/theos
+        export THEOS=~/theos
+        echo "export THEOS=~/theos" >> ~/.profile
+        curl -LO https://github.com/sbingner/llvm-project/releases/latest/download/linux-ios-arm64e-clang-toolchain.tar.lzma
+        TMP=$(mktemp -d)
+        tar -xf linux-ios-arm64e-clang-toolchain.tar.lzma -C $TMP
+        mkdir -p $THEOS/toolchain/linux/iphone
+        mv $TMP/ios-arm64e-clang-toolchain/* $THEOS/toolchain/linux/iphone/
+        rm -r linux-ios-arm64e-clang-toolchain.tar.lzma $TMP
+        curl -LO https://github.com/theos/sdks/archive/master.zip
+        TMP=$(mktemp -d)
+        unzip -q master.zip -d $TMP
+        mv $TMP/sdks-master/*.sdk $THEOS/sdks
+        rm -r master.zip $TMP
+      
+    - name: Download macOS SDK
+      if: steps.cache-theos.outputs.cache-hit != 'true'
+      run: |
+        curl -LO https://github.com/phracker/MacOSX-SDKs/releases/download/11.3/MacOSX11.0.sdk.tar.xz
+        tar -xJf MacOSX11.0.sdk.tar.xz
+        rm MacOSX11.0.sdk.tar.xz
+        mv MacOSX11.0.sdk ~/theos/sdks/MacOSX11.0.sdk
+    #- name: Clone macOS SDK
+    #  uses: actions/checkout@v2
+    #  with:
+    #    repository: 'phracker/MacOSX-SDKs'
+    #    path: 'macOS-sdks'
+    #- name: Configure macOS SDK
+    #  run: |
+    #    mv $GITHUB_WORKSPACE/macOS-sdks/MacOSX11.0.sdk ~/theos/sdks/MacOSX11.0.sdk
+    #    rm -rf $GITHUB_WORKSPACE/macOS-sdks
+    # Debian/Ubuntu provided LLVM only support native targets, using Homebrew prebuilt for all targets
+    - name: Setup LLVM dependencies
+      run: |
+        sudo apt install libedit2 libxml2 libncursesw6 binutils elfutils
+        wget -q http://ftp.debian.org/debian/pool/main/libf/libffi/libffi8_3.4.4-1_amd64.deb
+        sudo dpkg -i libffi8_3.4.4-1_amd64.deb
+    - name: Cache LLVM
+      id: cache-llvm
+      uses: actions/cache@v3
+      with:
+        key: llvm-cache
+        path: ~/llvm
+    - name: Download LLVM
+      if: steps.cache-llvm.outputs.cache-hit != 'true'
+      run: |
+        wget -q https://github.com/Torrekie/homebrew-core/releases/download/LLVM-14.0.6/llvm.tar.xz
+        tar xf llvm.tar.xz
+        rm llvm.tar.xz
+        mv llvm/14.0.6 ~/llvm
+    - name: Cache iSH GCC
+      id: cache-ish-gcc
+      uses: actions/cache@v3
+      with:
+        key: ish-gcc-cache
+        path: ~/i686-unknown-linux-musl
+    - name: Download iSH GCC
+      if: steps.cache-ish-gcc.outputs.cache-hit != 'true'
+      run: |
+        wget -q https://github.com/Torrekie/homebrew-core/releases/download/i686-unknown-linux-musl/i686-unknown-linux-musl.tar.xz
+        tar xf i686-unknown-linux-musl.tar.xz
+        rm i686-unknown-linux-musl.tar.xz
+        mv i686-unknown-linux-musl ~/
+    - name: Cache Openwrt mt7620 SDK
+      id: cache-openwrt-mt7620-sdk
+      uses: actions/cache@v3
+      with:
+        key: openwrt-sdk-mt7620-cache
+        path: ~/openwrt-sdk-21.02.2-ramips-mt7620_gcc-8.4.0_musl.Linux-x86_64
+    - name: Download Openwrt mt7620 SDK
+      if: steps.cache-openwrt-mt7620-sdk.outputs.cache-hit != 'true'
+      run: |
+        wget -q https://archive.openwrt.org/releases/21.02.2/targets/ramips/mt7620/openwrt-sdk-21.02.2-ramips-mt7620_gcc-8.4.0_musl.Linux-x86_64.tar.xz
+        tar -xJf openwrt-sdk-21.02.2-ramips-mt7620_gcc-8.4.0_musl.Linux-x86_64.tar.xz
+        rm openwrt-sdk-21.02.2-ramips-mt7620_gcc-8.4.0_musl.Linux-x86_64.tar.xz
+        mv openwrt-sdk-21.02.2-ramips-mt7620_gcc-8.4.0_musl.Linux-x86_64 ~/
+    - name: Cache Openwrt ipq40xx-generic SDK
+      id: cache-openwrt-ipq40xx-generic-sdk
+      uses: actions/cache@v3
+      with:
+        key: openwrt-sdk-ipq40xx-generic-cache
+        path: ~/openwrt-sdk-22.03.0-rc4-ipq40xx-generic_gcc-11.2.0_musl_eabi.Linux-x86_64
+    - name: Download Openwrt ipq40xx-generic SDK
+      if: steps.cache-openwrt-ipq40xx-generic-sdk.outputs.cache-hit != 'true'
+      run: |
+        wget -q https://downloads.openwrt.org/releases/22.03.0-rc4/targets/ipq40xx/generic/openwrt-sdk-22.03.0-rc4-ipq40xx-generic_gcc-11.2.0_musl_eabi.Linux-x86_64.tar.xz
+        tar -xJf openwrt-sdk-22.03.0-rc4-ipq40xx-generic_gcc-11.2.0_musl_eabi.Linux-x86_64.tar.xz
+        rm openwrt-sdk-22.03.0-rc4-ipq40xx-generic_gcc-11.2.0_musl_eabi.Linux-x86_64.tar.xz
+        mv openwrt-sdk-22.03.0-rc4-ipq40xx-generic_gcc-11.2.0_musl_eabi.Linux-x86_64 ~/
+    - name: Cache Openwrt mt7622 SDK
+      id: cache-openwrt-mt7622-sdk
+      uses: actions/cache@v3
+      with:
+        key: openwrt-sdk-mediatek-mt7622-cache
+        path: ~/openwrt-sdk-22.03.0-rc4-mediatek-mt7622_gcc-11.2.0_musl.Linux-x86_64
+    - name: Download Openwrt mt7622 SDK
+      if: steps.cache-openwrt-mt7622-sdk.outputs.cache-hit != 'true'
+      run: |
+        wget -q https://downloads.openwrt.org/releases/22.03.0-rc4/targets/mediatek/mt7622/openwrt-sdk-22.03.0-rc4-mediatek-mt7622_gcc-11.2.0_musl.Linux-x86_64.tar.xz
+        tar -xJf openwrt-sdk-22.03.0-rc4-mediatek-mt7622_gcc-11.2.0_musl.Linux-x86_64.tar.xz
+        rm openwrt-sdk-22.03.0-rc4-mediatek-mt7622_gcc-11.2.0_musl.Linux-x86_64.tar.xz
+        mv openwrt-sdk-22.03.0-rc4-mediatek-mt7622_gcc-11.2.0_musl.Linux-x86_64 ~/
     - name: Set build time
       id: build_time
       run: echo "build_time=$(date +"%Y.%m.%d-%H%M")" >> $GITHUB_OUTPUT
