--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build binaries and Upload to Release
 
 on:
   push:
-    branches: [ main ]
+    branches: [ Mainfull ]
     paths:
       - "version"
   workflow_dispatch: {}
@@ -200,6 +200,8 @@ jobs:
       run: echo "release_version=$(cat build/version)"  >> $GITHUB_OUTPUT
     - name: Release
       uses: softprops/action-gh-release@v0.1.14
+      env:
+        GITHUB_TOKEN: ${{ secrets.TOKEN }}
       with:
         tag_name: Dev${{ steps.release_version.outputs.release_version }}
         files: |
