--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -3,6 +3,8 @@ name: Check
 on:
   push:
     branches: [ Mainfull ]
+  pull_request:
+    types: [opened, edited]
 
 jobs:
   phoenixbuilder-check:
