--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -3,8 +3,8 @@ name: Check
 on:
   push:
     branches: [ Mainfull ]
-  pull_request:
-    types: [opened, edited]
+  pull_request: {}
+  workflow_dispatch: {}
 
 jobs:
   phoenixbuilder-check:
