--- a/.github/workflows/auto-assign.yml
+++ b/.github/workflows/auto-assign.yml
@@ -12,10 +12,12 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
           # using the `org/team_slug` or `/team_slug` syntax to add git team as reviewers
-          reviewers: |
+          #reviewers: |
+          assignees: |
             Eternal Crystal
             RainyHallways
           # assignees: assignee1, assignee2, assignee3
           skipKeywords: wip, draft, sync
           skipDraft: true
-          numberOfReviewers: 0
+          #numberOfReviewers: 1
+          numberOfAssignees: 1
