Bring Old Repo to this Repo

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,7 +2,9 @@ name: Check
 
 on:
   push:
-    branches: [ main ]
+    branches: [ Major ]
+  pull_request: {}
+  workflow_dispatch: {}
 
 jobs:
   phoenixbuilder-check:
